--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KT7_SkalochkinFedor_ISP321_MasterPol"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Мастер пол" Height="800" Width="800" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen" Icon="Resources/Мастер пол.ico">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Background="#F4E8D3">
+            <TextBlock Text="Мастер пол" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"></TextBlock>
+            <Image Source="Resources/Мастер пол.png" HorizontalAlignment="Left"></Image>
+        </Grid>
+        <Frame x:Name="MainFrame" Grid.Row="1"></Frame>
     </Grid>
 </Window>
